--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+@use './styles/partials/typography' as *;
+@use './styles/partials/mixins' as *;
+@use './styles/partials/variables' as *;
+
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap);
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background: #f8f8f8;
+  @include font-stack-main;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+section {
+  width: 100%;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 1.75rem;
+  font-weight: 600
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  font-size: 1.4rem
+}
+
+button {
+  @include font-stack-button ;
 }
