--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,25 @@
 @use '../../styles/partials/typography' as *;
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/variables' as *;
+
+.header {
+    width: 100%;
+    height: 60px;
+    padding: 1rem;
+    @include flex(space-between, center, row, nowrap);
+
+    @include tablet {
+        height: auto;
+        @include flex(center, center, column, nowrap);
+        gap: 1rem;
+    }
+
+    &__logo {
+        @include  font-stack(italic, 2.5rem, 800, null, null);
+    }
+
+    &__user {
+        @include flex(space-between, center, row, nowrap);
+        gap: 1rem;
+    }
+}
