Created eden request

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,4 +22,8 @@
         @include flex(space-between, center, row, nowrap);
         gap: 1rem;
     }
+
+    &__text-caption{
+        text-transform: capitalize;
+    }
 }
