--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -14,6 +14,7 @@ $bg-primary-btn: #ececec;
 $bg-hover-primary-btn: #e2e2e2;
 $bg-secondary-btn: #73c2fb;
 $bg-hover-secondary-btn: #4bb1fa;
+$divider: #d7d7d7;
 
 
 
