--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,13 @@ h2 {
   font-size: 1.4rem
 }
 
+section {
+  padding: 1rem;
+  width: 100%;
+  height: 100vh;
+  @include flex(flex-start, center, column, nowrap);
+}
+
 button {
   @include font-stack-button ;
 }
