--- a/src/pages/RecognizePage/RecognizePage.scss
+++ b/src/pages/RecognizePage/RecognizePage.scss
@@ -3,5 +3,57 @@
 @use '../../styles/partials/variables' as *;
 
 .recognize {
-    color: green;
+
+    &__heading {
+        width: 100%;
+        padding: 1.5rem 0;
+        @include font-stack(null, 1.625rem,600, null, $font-headng-auth);
+    }
+
+    &__form,
+    &__results-wrapper {
+        width: 80%;
+        border-radius: 10px;
+        background: $bg-input;
+        padding: 1.75rem;
+        box-shadow: 0 1px 15px rgba(0, 0, 0, .04), 0 1px 6px rgba(0, 0, 0, .04);
+        @include flex(flex-start, center, column, nowrap);
+
+        @include tablet {
+            width: 90%;
+        }
+    }
+
+    .button__secondary {
+        max-width: 400px;
+        width: 50%;
+
+        @include tablet {
+            width: 100%;
+        }
+    }
+
+    &__divider {
+        margin: 2rem;
+        width: 100%;
+        border: 1px solid $divider;
+    }
+
+    &__results-wrapper {
+        min-height: 317px;
+    }
+
+    &__subheading {
+        width: 100%;
+        text-align: left;
+        margin-bottom: 1.5rem;
+    }
+
+    &__container-message {
+        width: 100%;
+    }
+
+    &__text-message {
+        text-align: center;
+    }
 }
