--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -45,6 +45,11 @@
         }
     }
 
+    &__delete {
+        color: #d15f5f !important;
+        background-color: #faedee;
+    }
+
     &__icon {
         position: absolute;
         right: 10px;
