--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -15,7 +15,10 @@ $bg-hover-primary-btn: #e2e2e2;
 $bg-secondary-btn: #73c2fb;
 $bg-hover-secondary-btn: #4bb1fa;
 $divider: #d7d7d7;
-
+$bg-table: #f3f3f3;
+$bg-success: #e6f7ef;
+$font-success: #45946d;
+$bg-delete-btn: #faedee;
 
 
 
